--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>so yur videos will have sound, duh</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>You u can acess media in your gallery</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>So you can access your gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>So you can use your camera to take pics!</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
